# LinSpire

./: .gitignore  CMakeLists.txt  README.md
include/: LinSpire.h  linspire.hpp  var.hpp
src/: LinSpire.cpp  linspire.cpp  main.cpp  var.cpp
tests/: CMakeLists.txt  test_linspire.cpp
